--- a/pages/search/search.css
+++ b/pages/search/search.css
@@ -9,10 +9,12 @@
   display: flex;
   flex-flow: row wrap;
   max-height: 70vh;
+  flex: 1;
 }
 
 .search-container {
   flex: 2;
+  width: 100%;
   min-width: 500px;
   display: flex;
   flex-direction: column;
@@ -23,8 +25,8 @@
   padding-top: 60px;
   min-width: 300px;
   margin-right: 20px;
-  flex: 1;
   text-align: center;
+  flex: 1;
 }
 
 .filter-container button {
@@ -54,6 +56,7 @@ body {
   border: 1px solid black;
   padding: 20px;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .card-details {
