--- a/public/css/autocompleteField.css
+++ b/public/css/autocompleteField.css
@@ -29,7 +29,7 @@
   overflow-y: auto;
   box-sizing: border-box;
 }
-.autocomplete-items div {
+.autocomplete-items article {
   padding: 10px;
   cursor: pointer;
   background-color: #fff;
@@ -37,11 +37,11 @@
   box-sizing: border-box;
 }
 
-.autocomplete-items div:hover {
+.autocomplete-items article:hover {
   background-color: #e9e9e9;
 }
-.autocomplete-active {
+.autocomplete-items .autocomplete-active {
   /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
+  background-color: DodgerBlue;
   color: #ffffff;
 }
