--- a/public/css/autocompleteField.css
+++ b/public/css/autocompleteField.css
@@ -41,7 +41,10 @@
   background-color: #e9e9e9;
 }
 .autocomplete-items .autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
   background-color: DodgerBlue;
   color: #ffffff;
+}
+
+strong {
+  background: inherit;
 }
