--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -2,7 +2,7 @@
   font-family: Roboto, sans-serif;
 }
 #home_link {
-  background-image: url("/assets/images/logo.png");
+  background-image: url("/assets/images/logo-2.png");
   background-size: 100%;
   background-position: center;
 }
