--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -1,6 +1,41 @@
 * {
   font-family: Roboto, sans-serif;
 }
+#hamburger-links {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: hidden;
+}
+
+#hamburger {
+  display: none;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  font-size: x-large;
+  color: inherit;
+  text-decoration: none;
+  background: none;
+  border: none;
+}
+
+#hamburger-links.hamburger-active {
+  display: flex;
+  flex-flow: column nowrap;
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  height: unset;
+  background: white;
+  width: 100px;
+}
+
+#hamburger-links.hamburger-active a {
+  height: 30px;
+  font-size: large;
+}
+
 #home_link {
   background-image: url("/assets/images/logo-2.png");
   background-size: 100%;
@@ -20,7 +55,6 @@
   left: 0;
   right: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
 
   flex-wrap: wrap;
@@ -37,31 +71,27 @@
   font-size: x-large;
   color: inherit;
   text-decoration: none;
-  background: none;
+  background-color: none;
   border: none;
 }
-
+#hamburger:hover,
 .nav-bar a:not(#home_link):hover {
-  background: #1f1f21;
+  background-color: #1f1f21;
   color: white;
-  transition: all;
+  transition: color;
   transition-duration: 0.1s;
-}
-
-@media screen and (max-width: 750px) {
-  .nav-bar .nav-content a {
-    display: none;
-  }
-  #search-bar-form {
-    flex: 1;
-  }
 }
 
 #search-bar-form {
   max-width: 500px;
   display: flex;
   margin-left: 10px;
+  margin-right: 10px;
   border: none;
+  align-items: center;
+  transition: flex;
+  transition-duration: 0.7s;
+  transition-timing-function: ease-out;
 }
 .search-bar-input {
   height: 30px;
@@ -72,13 +102,32 @@
   font-size: large;
   flex: 1;
 }
-
-#search-bar-form {
-  transition: flex;
-  transition-duration: 0.7s;
-  transition-timing-function: ease-out;
+#buttons-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 #search-bar-form:focus-within {
   flex: 1;
+}
+
+@media screen and (max-width: 769px) {
+  #search-bar-form {
+    flex: 1;
+
+    margin: 10px;
+  }
+  #hamburger {
+    display: block;
+  }
+  #hamburger-links {
+    display: none;
+    height: 0;
+  }
+}
+@media screen and (max-width: 416px) {
+  #buttons-container {
+    justify-content: space-between;
+    flex: 1;
+  }
 }
