--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -87,6 +87,7 @@
   display: flex;
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 0px;
   border: none;
   align-items: center;
   transition: flex;
