--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,17 +1,35 @@
-html *
-{
-  font-family: sans-serif;
-  color: var(--text-dark);
+html * {
+    font-family: sans-serif;
+    color: var(--text-dark);
 }
 
-button{
+.btn-list {
     padding: 10px;
     background-color: var(--blue-primary);
     color: var(--text-light);
     border: 1px solid black;
     border-radius: 4px;
-  }
-  
-button:hover, button:focus{
+    cursor: pointer;
+    position: absolute;
+    right: 5px;
+    margin-right: 6%;
+    margin-top: 130px;
+}
+
+.btn-list:hover,
+.btn-list:focus {
+    background-color: var(--blue-secondary);
+}
+
+button {
+    padding: 10px;
+    background-color: var(--blue-primary);
+    color: var(--text-light);
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+button:hover,
+button:focus {
     background-color: var(--blue-secondary);
 }
